fai (3.3.2) unstable; urgency=low

  [ Thomas Lange ]
  * make-fai-nfsroot: do not remove fai.conf from upstart directory
    (Thanks to Waldemar Brodkorb for the patch)
  * fai-guide.txt: minor fixes (Thanks to Waldemar for the patch)
  * load_keymap_consolechars: add code for usage of setupcon (thanks to
    Waldemar)
  * THANKS: add Waldemar

 -- Thomas Lange <lange@debian.org>  Tue, 17 Nov 2009 11:03:32 +0100

fai (3.3.1) unstable; urgency=low

  [ Thomas Lange ]
  * add class GRUB_PC
  * doc/Makefile: add target chunked
  * Commands.pm: add ext4 support for tune2fs
  * Fstab: do not fsck swap partitions
  * fai,make-fai-nfsroot: add upstart support
  * upstart-fai.conf: new file for starting fai via upstart
  * fai-nfsroot.dirs, fai-nfsroot.install, Makefile: add upstart files
  * setup-storage: increase version number
  
 -- Thomas Lange <lange@debian.org>  Mon, 16 Nov 2009 14:21:16 +0100

fai (3.3) unstable; urgency=low

  [ Thomas Lange ]
  * NEWS: add hint about missing packages in nfsroot, changes in
    dirinstall
  * control: update to standards version 3.8.3, no changes needed
  * sources.list,make-fai-nfsroot.conf: use Debian geo mirrors
  * README: use description from control file
  * subroutines-linux: fix log message
    remove yes pipe when calling debootstrap (closes: #539980)
    if NEXTTEST is used, define a class for next reboot. Thanks to
    Sebastian Hetze for this patch.
    task_updatebase now writes to software.log
    print warning when setup_harddisks is used
    include subroutines-linux into subroutines (closes: #494377)
  * subroutines: do not unset the functions task_$taskname after use
    fill task_tests with code, execute tests before task chboot
    create /var/run/sshd (needed for ubuntu 9.10)
    additional call to clean_exit in task_dirinstall
    include subroutines-linux into subroutines (closes: #494377)
    if two softupdates are running, print the name of the lock file