@@ -52,7 +52,7 @@ use warnings FATAL => qw(uninitialized);
 
 package FAI;
 
-my $version = "1.1.3";
+my $version = "1.1.4";
 
 # command line parameter handling
 use Getopt::Std;
