@@ -7,8 +7,10 @@ fai (3.3.2) unstable; urgency=low
   * load_keymap_consolechars: add code for usage of setupcon (thanks to
     Waldemar)
   * THANKS: add Waldemar
+  * Parser.pm: fix code for preserving lvm partitions (thanks to Michael
+    for the patch)
 
- -- Thomas Lange <lange@debian.org>  Tue, 17 Nov 2009 11:03:32 +0100
+ -- Thomas Lange <lange@debian.org>  Tue, 17 Nov 2009 11:38:49 +0100
 
 fai (3.3.1) unstable; urgency=low
 
